--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bad-words": "^3.0.0",
     "express": "^4.16.4",
-    "socket.io": "^2.2.0"
+    "peer": "^0.6.1",
+    "peerjs": "^1.3.2",
+    "socket.io": "^2.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.7"
